// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaTag large tag 1`] = `
<span tabindex="0" class="va-tag va-tag--large" style="background: rgb(0, 0, 0); box-shadow: 0 0.125rem 0.19rem 0 rgba(0,0,0,0.4);"><!----> <span class="va-tag__content"></span>
<!----></span>
`;

exports[`VaTag small tag 1`] = `
<span tabindex="0" class="va-tag va-tag--small" style="background: rgb(0, 0, 0); box-shadow: 0 0.125rem 0.19rem 0 rgba(0,0,0,0.4);"><!----> <span class="va-tag__content"></span>
<!----></span>
`;
